numbers spacing fix

--- a/src/components/Coin.css
+++ b/src/components/Coin.css
@@ -33,9 +33,12 @@
   height: 30px;
   width: 30px;
   margin-right: 15px;
+  margin-bottom: 10px;
 }
 
+
 .coin-symbol {
+  margin-bottom: 10px;
   text-transform: uppercase;
 }
 
@@ -44,15 +47,19 @@
   text-align: right;
   justify-content: space-between;
   width: 100%;
+  
 
 }
 
 .coin-price {
   width: 110px;
+  margin-right: 30px;
+  
 }
 
 .coin-volume {
   width: 155px;
+  margin-right: 30px;
 }
 
 .coin-marketcap {
@@ -80,7 +87,7 @@
     border-bottom: 1px solid #d7d7d7;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     margin-bottom: 20px;
-    width: 800px;
+    width: 1000px;
   
   }
 }
